--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -812,6 +812,7 @@
         <li><a href="/new" class="hover:text-blue-300">Sản phẩm mới</a></li>
         <li><a href="/all" class="hover:text-blue-300">Tất cả sản phẩm</a></li>
         <li><a href="/bestsellers" class="hover:text-blue-300">Sản phẩm bán chạy</a></li>
+        <li><a href="/chinh-sach" class="hover:text-blue-300">Chính sách</a></li>
       </ul>
     </div>
     <div>
